--- a/mingw-w64-crt/lib32/crtdll.def.in
+++ b/mingw-w64-crt/lib32/crtdll.def.in
@@ -623,6 +623,7 @@ _ltow
 _ultow
 
 ; include symbol aliases for compatibility with msvcrt.dll
+#define CRTDLL
 #define PRE_C95_SWPRINTF
 #define FIXED_SIZE_SYMBOLS
 #define NO_WIDE_FIXED_SIZE
