crt: crtdll.dll: Rename crtdll_compat.c to crtdll_getmainargs.c
Filename crtdll_getmainargs.c better describe which function it provides.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -574,7 +574,7 @@ src_msvcrtarm64=\
   stdio/gets.c
 
 src_crtdll=\
-  crt/crtdll_compat.c \
+  crt/crtdll_getmainargs.c \
   math/x86/_copysignf.c \
   misc/___mb_cur_max_func.c \
   misc/__initenv.c \
