crt: Provide fstat function symbol via alias
For 32-bit time_t (detected by _USE_32BIT_TIME_T), functions _fstat32(),
_fstat() and fstat() are same. So fstat() can be defined as simple alias
in def file.

Same applies for functions _fstat64i32(), _fstat() and fstat() when time_t
is 64-bit.

Simplify fstat() function, remove it from mingw-w64-crt/stdio/_fstat.c file
and provide it via aliases in api-ms-win-crt-filesystem-l1-1-0.def.in and
crt-aliases.def.in for all CRT import libraries.

This fixes FIXME issue described in the fstat.c.

This change also ensures that fstat and _fstat symbols would results in the
same function calls.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -56,7 +56,12 @@ ADD_UNDERSCORE(filelength)
 ADD_UNDERSCORE(fileno)
 ; ADD_UNDERSCORE(flushall)
 ADD_UNDERSCORE(fputchar)
-; ADD_UNDERSCORE(fstat)
+#ifdef FIXED_SIZE_SYMBOLS
+ADD_UNDERSCORE(fstat)
+#else
+F32(fstat == _fstat32)
+F64(fstat == _fstat64i32)
+#endif
 ; ADD_UNDERSCORE(ftime)
 #if defined(UCRTBASE)
 ; _HUGE variable is not available in ucrtbase.dll and there is no replacement for it
