crt: Add guards in func.def.in file
Add once-guard to ensure that the file is processed only once.

Add arch-guard to ensure that DEF_<ARCH> is always defined to prevent an
issue that symbols defined via F32() macro completely disappeared and which
was fixed in previous change.

This change applied before the previous change cause compile errors.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/func.def.in
+++ b/mingw-w64-crt/def-include/func.def.in
@@ -1,3 +1,6 @@
+#ifndef FUNC_DEF_IN
+#define FUNC_DEF_IN
+
 // F32         - function available on all 32 bit architectures
 // F64         - function available on all 64 bit architectures
 // F_X86_ANY   - function available on i386 and x86_64
@@ -26,6 +29,8 @@
 #define F_ARM64(x) x
 #define F_ARM_ANY(x) x
 #define F_NON_I386(x) x
+#else
+#error No DEF_<ARCH> is defined
 #endif
 
 #ifndef F32
@@ -60,3 +65,5 @@
 // for __cdecl and __stdcall only
 #define DECORATED_EXPORT(symbol) symbol == _ ## symbol
 #endif
+
+#endif // FUNC_DEF_IN
