crt: Rename macro DECORATED_EXPORT() to STDCALL_DECORATED_EXPORT()
This macro is currently used only for stdcall functions.

Rename it and includes STDCALL into the name to prevent confusion that it
cannot be used for example for fastcall functions (they do not have leading
underscore in name, like stdcall and cdecl).

Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/def-include/func.def.in
+++ b/mingw-w64-crt/def-include/func.def.in
@@ -62,8 +62,7 @@
 #endif
 
 #if defined(DEF_I386)
-// for __cdecl and __stdcall only
-#define DECORATED_EXPORT(symbol) symbol == _ ## symbol
+#define STDCALL_DECORATED_EXPORT(symbol) symbol == _ ## symbol
 #endif
 
 #endif // FUNC_DEF_IN
