crt: Provide __iob_func function by every msvcrt import library
Both functions __iob_func() and __p__iob() returns same constant value -
pointer to the first member of _iob[] array. Symbol for _iob[] array is
present in every msvcrt DLL library.

Function __p__iob() is provided by every i386 version of msvcrt DLL library
since VC20. But it is not available in any non-i386 version. Function
__iob_func() is provided by every version of msvcrt DLL library since VC70
for every architecture. __iob_func() is provided also by every X64 and ARM
versions of OS system version msvcrt.dll.

Note that UCRT does not provide neither __iob_func(), nor __p__iob()
function.

So for all msvcrt versions before VC70 define __iob_func symbol as an alias
to __p__iob symbol. And for versions before VC20 provide custom mingw-w64
implementation of __iob_func() function which returns pointer to the first
member of _iob[] array.

This change allows to remove #ifdef around _iob declaration in stdio.h and
wchar.h header files as now the __iob_func() function is provided by every
version of msvcrt import library.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -595,6 +595,7 @@ src_crtdll=\
   stdio/_scprintf.c \
   stdio/_vscprintf.c \
   stdio/atoll.c \
+  stdio/iob_func.c \
   stdio/mingw_dummy__lock.c \
   stdio/mingw_lock.c
 
@@ -619,6 +620,7 @@ src_msvcrt10=\
   stdio/_scprintf.c \
   stdio/_vscprintf.c \
   stdio/atoll.c \
+  stdio/iob_func.c \
   stdio/mingw_dummy__lock.c \
   stdio/mingw_lock.c
 
