--- a/mingw-w64-crt/lib32/msvcrt20.def.in
+++ b/mingw-w64-crt/lib32/msvcrt20.def.in
@@ -1580,4 +1580,5 @@ _safe_fprem1
 #define FIXED_SIZE_SYMBOLS
 #define NO_I64_FIXED_SIZE
 #define NO_STRCMPI_ALIAS
+#define WITH_IOB_FUNC_ALIAS
 #include "crt-aliases.def.in"
