--- a/mingw-w64-crt/lib32/msvcrtd.def.in
+++ b/mingw-w64-crt/lib32/msvcrtd.def.in
@@ -858,6 +858,7 @@ _chkesp
 #define NO_FIXED_SIZE_64_ALIAS
 #define NO_TIME_ALIAS
 #define NO_STRCMPI_ALIAS
+#define WITH_IOB_FUNC_ALIAS
 #define WITH_ATOLL_ALIAS
 #define WITH_ATOLL_L_ALIAS
 #define WITH_STRTO64_L_ALIAS
