crt: Improve ___mb_cur_max_func() function support
Provide fallback ___mb_cur_max_func() implementation via __p___mb_cur_max()
function. __p___mb_cur_max() is available since VC20. For earlier version
import libraries provide fallback __p___mb_cur_max() implementation via
global variable __mb_cur_max.

With this change every CRT import library provides ___mb_cur_max_func()
function. So remove #ifdefs for __mb_cur_max declarations in header files.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -580,6 +580,7 @@ src_crtdll=\
   misc/___mb_cur_max_func.c \
   misc/__initenv.c \
   misc/__p___argv.c \
+  misc/__p___mb_cur_max.c \
   misc/__p__acmdln.c \
   misc/__p__commode.c \
   misc/__p__fmode.c \
@@ -605,6 +606,7 @@ src_msvcrt10=\
   misc/___mb_cur_max_func.c \
   misc/__initenv.c \
   misc/__p___argv.c \
+  misc/__p___mb_cur_max.c \
   misc/__p__acmdln.c \
   misc/__p__commode.c \
   misc/__p__fmode.c \
