crt: Fix definition for _pwctype to be available also for UCRT
Global variable _pwctype is not available in UCRT. Instead UCRT has only
__pwctype_func() function which returns value of _pwctype variable.

Function __pwctype_func() is available also in msvcrt since VC70. For
previous i386 msvcrt versions there is a __p__pwctype() function which
returns pointer to the _pwctype variable.

Like for _pctype changes, add fallback versions of __pwctype_func() and
__p__pwctype() functions suitable for older CRT versions. And change
definition of _pwctype in header file from the global variable to macro
which calls __pwctype_func() function.

This change allows to use _pwctype with all CRT libraries, including UCRT.

Fix also type of _pwctype. In msvc its type is wctype_t and not unsigned
short. Note that wctype_t is just typedef for unsigned short, so this
should be just a cosmetic change to align with msvc.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -437,6 +437,7 @@ src_msvcrt32=\
   math/x86/_copysignf.c \
   misc/___mb_cur_max_func.c \
   misc/__pctype_func.c \
+  misc/__pwctype_func.c \
   misc/_create_locale.c \
   misc/_free_locale.c \
   misc/_get_current_locale.c \
@@ -586,7 +587,9 @@ src_crtdll=\
   misc/__p__commode.c \
   misc/__p__fmode.c \
   misc/__p__pctype.c \
+  misc/__p__pwctype.c \
   misc/__pctype_func.c \
+  misc/__pwctype_func.c \
   misc/__set_app_type.c \
   misc/dummy__setusermatherr.c \
   misc/imaxabs.c \
@@ -614,7 +617,9 @@ src_msvcrt10=\
   misc/__p__commode.c \
   misc/__p__fmode.c \
   misc/__p__pctype.c \
+  misc/__p__pwctype.c \
   misc/__pctype_func.c \
+  misc/__pwctype_func.c \
   misc/__set_app_type.c \
   misc/dummy__setusermatherr.c \
   misc/imaxabs.c \
@@ -636,6 +641,7 @@ src_msvcrt20=\
   crt/msvcrt20_wgetmainargs.c \
   misc/___mb_cur_max_func.c \
   misc/__pctype_func.c \
+  misc/__pwctype_func.c \
   misc/__set_app_type.c \
   misc/dummy__setusermatherr.c \
   misc/imaxabs.c \
@@ -654,6 +660,7 @@ src_msvcrt20=\
 src_msvcrt40=\
   misc/___mb_cur_max_func.c \
   misc/__pctype_func.c \
+  misc/__pwctype_func.c \
   misc/imaxabs.c \
   misc/imaxdiv.c \
   misc/invalid_parameter_handler.c \
