crt: Fix _wctype definitions in def files
_wctype is global variable exported from DLL library, so mark it with
DATA and removes false-positive function stdcall @size decoration.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcr120_app.def.in
+++ b/mingw-w64-crt/lib-common/msvcr120_app.def.in
@@ -1863,9 +1863,7 @@ _wctime64
 _wctime64_s
 _wctomb_l
 _wctomb_s_l
-F_X64(_wctype DATA)
-F_I386(_wctype@50371)
-F_ARM32(_wctype)
+_wctype DATA
 F_X86_ANY(_wenviron DATA)
 F_ARM32(_wexecl)
 F_ARM32(_wexecle)
