--- a/mingw-w64-crt/lib32/msvcr110.def.in
+++ b/mingw-w64-crt/lib32/msvcr110.def.in
@@ -1688,7 +1688,7 @@ _wctime64
 _wctime64_s
 _wctomb_l
 _wctomb_s_l
-_wctype ; Check!!! Couldn't determine function argument count. Function doesn't return. 
+_wctype DATA
 _wdupenv_s
 _wenviron DATA
 _wexecl
