--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -458,6 +458,7 @@ src_msvcrt64=\
   misc/__p__acmdln.c \
   misc/__p__commode.c \
   misc/__p__fmode.c \
+  misc/__p__mbctype.c \
   misc/__p__wcmdln.c \
   misc/_create_locale.c \
   misc/_free_locale.c \
@@ -471,6 +472,7 @@ src_msvcrtarm32=\
   misc/__p__acmdln.c \
   misc/__p__commode.c \
   misc/__p__fmode.c \
+  misc/__p__mbctype.c \
   misc/__p__wcmdln.c \
   misc/_getpid.c \
   misc/initenv.c \
@@ -569,6 +571,7 @@ src_msvcrtarm64=\
   misc/__p__acmdln.c \
   misc/__p__commode.c \
   misc/__p__fmode.c \
+  misc/__p__mbctype.c \
   misc/__p__wcmdln.c \
   misc/_getpid.c \
   misc/initenv.c \
@@ -586,6 +589,7 @@ src_crtdll=\
   misc/__p__acmdln.c \
   misc/__p__commode.c \
   misc/__p__fmode.c \
+  misc/__p__mbctype.c \
   misc/__p__pctype.c \
   misc/__p__pwctype.c \
   misc/__pctype_func.c \
