crt: Provide __sys_errlist() and __sys_nerr() by every msvcrt import library
Global variable _sys_nerr is present in every CRT library except UCRT.
Function __sys_nerr() is present since msvcr80.dll and returns pointer to
the global variable _sys_nerr. This function is not present in any
msvcrt.dll library version, but is present in UCRT library.

Same applies for global array _sys_errlist[] and function __sys_errlist()
which returns pointer to the first member of __sys_errlist[] array.

For all pre-msvcr80 CRT import libraries provides mingw-w64 functions
__sys_errlist() and __sys_nerr(). And change stdlib.h header file to
define _sys_nerr and _sys_errlist via __sys_errlist() and __sys_nerr()
functions. With this change, definitions will be compatible for all CRT
versions (crtdll, msvcrt, msvcr80+, UCRT).

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -294,6 +294,8 @@ src_msvcrt_commonarm64=\
 
 # Files included in libmsvcrt-os.a (for msvcrt.dll) on all archs
 src_msvcrt=\
+  misc/__sys_errlist.c \
+  misc/__sys_nerr.c \
   misc/_configthreadlocale.c \
   misc/imaxdiv.c \
   misc/invalid_parameter_handler.c \
@@ -598,6 +600,8 @@ src_crtdll=\
   misc/__pctype_func.c \
   misc/__pwctype_func.c \
   misc/__set_app_type.c \
+  misc/__sys_errlist.c \
+  misc/__sys_nerr.c \
   misc/dummy__setusermatherr.c \
   misc/imaxabs.c \
   misc/imaxdiv.c \
@@ -628,6 +632,8 @@ src_msvcrt10=\
   misc/__pctype_func.c \
   misc/__pwctype_func.c \
   misc/__set_app_type.c \
+  misc/__sys_errlist.c \
+  misc/__sys_nerr.c \
   misc/dummy__setusermatherr.c \
   misc/imaxabs.c \
   misc/imaxdiv.c \
@@ -650,6 +656,8 @@ src_msvcrt20=\
   misc/__pctype_func.c \
   misc/__pwctype_func.c \
   misc/__set_app_type.c \
+  misc/__sys_errlist.c \
+  misc/__sys_nerr.c \
   misc/dummy__setusermatherr.c \
   misc/imaxabs.c \
   misc/imaxdiv.c \
@@ -668,6 +676,8 @@ src_msvcrt40=\
   misc/___mb_cur_max_func.c \
   misc/__pctype_func.c \
   misc/__pwctype_func.c \
+  misc/__sys_errlist.c \
+  misc/__sys_nerr.c \
   misc/imaxabs.c \
   misc/imaxdiv.c \
   misc/invalid_parameter_handler.c \
@@ -682,6 +692,8 @@ src_msvcrt40=\
   stdio/mingw_lock.c
 
 src_msvcr70=\
+  misc/__sys_errlist.c \
+  misc/__sys_nerr.c \
   misc/imaxabs.c \
   misc/imaxdiv.c \
   misc/invalid_parameter_handler.c \
@@ -689,6 +701,8 @@ src_msvcr70=\
   stdio/mingw_lock.c
 
 src_msvcr71=\
+  misc/__sys_errlist.c \
+  misc/__sys_nerr.c \
   misc/imaxabs.c \
   misc/imaxdiv.c \
   misc/invalid_parameter_handler.c \
