crt: Provide __p___wargv() function for VC20+ CRT import libraries
Function __p___wargv() returns pointer to the first member of global array
__wargv[] and is available since VC20, it is available also in UCRT, and
also in x86 version of OS system version msvcrt.dll.

crtdll.dll and msvcrt10.dll do not provide __wargv[] array and
__wgetmainargs() function, so for these libraries is not provided neither
__p___wargv() function.

For remaining CRT import libraries (x64/arm32/arm64 msvcrt.dll) provide
mingw-w64 version of __p___wargv() function defined via global array
__wargv[].

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -458,6 +458,7 @@ src_msvcrt64=\
   $(src_msvcrt) \
   misc/__p___argc.c \
   misc/__p___argv.c \
+  misc/__p___wargv.c \
   misc/__p__acmdln.c \
   misc/__p__commode.c \
   misc/__p__fmode.c \
@@ -474,6 +475,7 @@ src_msvcrtarm32=\
   $(src_msvcrt) \
   misc/__p___argc.c \
   misc/__p___argv.c \
+  misc/__p___wargv.c \
   misc/__p__acmdln.c \
   misc/__p__commode.c \
   misc/__p__fmode.c \
@@ -575,6 +577,7 @@ src_msvcrtarm64=\
   math/arm64/truncf.S \
   misc/__p___argc.c \
   misc/__p___argv.c \
+  misc/__p___wargv.c \
   misc/__p__acmdln.c \
   misc/__p__commode.c \
   misc/__p__fmode.c \
