crt: Provide __p__environ() function for most CRT import libraries
Function __p__environ() returns pointer to the first member of global array
_environ[] and is available since VC20, it is available also in UCRT, and
also in x86 version of OS system version msvcrt.dll.

CRT libraries crtdll.dll, msvcrt10.dll and x64 msvcrt.dll do not provide
__p__environ() function but have exported _environ[] array. For thse import
libraries provide mingw-w64 version of __p__environ() function defined via
global variable _environ[].

Remaining CRT libraries arm32 and arm64 os system versions of msvcrt.dll do
not provide neither __p__environ() function, nor _environ[] array. So these
import libraries stay even without emulation.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -461,6 +461,7 @@ src_msvcrt64=\
   misc/__p___wargv.c \
   misc/__p__acmdln.c \
   misc/__p__commode.c \
+  misc/__p__environ.c \
   misc/__p__fmode.c \
   misc/__p__mbcasemap.c \
   misc/__p__mbctype.c \
@@ -600,6 +601,7 @@ src_crtdll=\
   misc/__p___mb_cur_max.c \
   misc/__p__acmdln.c \
   misc/__p__commode.c \
+  misc/__p__environ.c \
   misc/__p__fmode.c \
   misc/__p__mbctype.c \
   misc/__p__pctype.c \
@@ -634,6 +636,7 @@ src_msvcrt10=\
   misc/__p___mb_cur_max.c \
   misc/__p__acmdln.c \
   misc/__p__commode.c \
+  misc/__p__environ.c \
   misc/__p__fmode.c \
   misc/__p__pctype.c \
   misc/__p__pwctype.c \
